# CoWSuper

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
constrained_weak_supervision/: CLL.py  ConstraintEstimator.py  DCWS.py  utilities.py
cowsuper/: BaseClassifier.py  CLL.py  ConstraintEstimator.py  DCWS.py  __init__.py  log.py
cowsuper/examples/datasets/breast-cancer/: data_features.npy  test_labels.npy  weak_signals.npy
cowsuper/examples/datasets/sst-2/: data_labels.npy  test_labels.npy
examples/: run_experiments.py
examples/datasets/: generate_weak_signals.py
examples/datasets/breast-cancer/: data_labels.npy  test_features.npy
examples/datasets/sst-2/: weak_signals.npy
