[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CoWSuper"
version = "0.0.1"
authors = [
  { name="Bert Huang", email="bert@cs.tufts.edu" },
]
description = "A tool that produces labels using weakly supervised learning with constraint-based methods."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jianhui-chen/CoWSuper" 